--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "autoprefixer": "^10.4.20",
     "electron": "33.2.0",
     "electron-devtools-installer": "^3.2.0",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.31.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "ts-node": "^10.9.2",
     "typescript": "~4.5.4",
     "vite": "^5.4.11"
