--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
-    "postinstall": "install-app-deps"
+    "postinstall": "electron-builder install-app-deps"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.6.0",
@@ -30,12 +30,13 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.20",
-    "electron": "33.2.0",
+    "electron": "^33.2.1",
     "electron-builder": "^25.1.8",
     "electron-devtools-installer": "^3.2.0",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.31.0",
     "postcss": "^8.4.49",
+    "sqlite3": "^5.1.7",
     "tailwindcss": "^3.4.15",
     "ts-node": "^10.9.2",
     "typescript": "~4.5.4",
@@ -50,7 +51,6 @@
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sqlite3": "^5.1.7"
+    "react-dom": "^18.3.1"
   }
 }
